Добавил поле "действует на основанн"

--- a/index.html
+++ b/index.html
@@ -357,6 +357,13 @@
                     &ensp;
                     <input name="name3" type="text" size="72">
                 </p>
+
+                <p class="right">
+                    <label for="name3">действует на основании:*</label>
+                    &ensp;
+                    <input name="name3" type="text" size="72">
+                </p>
+
             </fieldset>
 
             <br>
@@ -394,7 +401,7 @@
             </fieldset>
 
 
-           
+
 
 
             <fieldset>
@@ -455,9 +462,9 @@
                             title="вертикальное положение, сварка снизу вверх">PF</label>
                         <input type="checkbox" name="opt1" id="l_s_pg" value="true"
                             title="вертикальное положение, сварка сверху вниз"><label for="l_s_pg"
-                                title="вертикальное положение, сварка сверху вниз">PG</label>
-                            <input type="checkbox" name="opt1" id="l_s_pe" value="true"
-                                title="потолочное положение"><label for="l_s_pe" title="потолочное положение">PE</label>
+                            title="вертикальное положение, сварка сверху вниз">PG</label>
+                        <input type="checkbox" name="opt1" id="l_s_pe" value="true" title="потолочное положение"><label
+                            for="l_s_pe" title="потолочное положение">PE</label>
 
                     </fieldset>
 
@@ -637,7 +644,7 @@
 
 
 
-            
+
 
 
 
